fix overflow-x, and some style to page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,3 @@
-html, body {
-  overflow: hidden;
-  width: 90%;
-}
-
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
@@ -697,7 +692,7 @@ section {
 }
 
 .about .video-box {
-  background: url("../img/details-4.png") center center no-repeat;
+  background: url("../img/about.png") center center no-repeat;
   background-size: contain;
   min-height: 300px;
 }
